2010-04-08
 - Density is now calculated as a complex quantity
2010-03-29
 - Implementation for periodic system initiated
 - Changed default solver method from `gmres` to `cg` in ScipyLinearSolver