@@ -129,7 +129,49 @@ class ResponseCalculator:
 
         self.parameters = {}
         self.set(**kwargs)
+
+    def __call__(self):
+        """Calculate density derivative."""
+
+        assert self.initialized, ("Linear response calculator "
+                                  "not initizalized.")
+
+        # Parameters
+        p = self.parameters
+        max_iter = p['max_iter']
+        tolerance = p['tolerance_sc']
         
+        # Reset mixer
+        self.mixer.reset()
+        # Reset wave-functions
+        self.wfs.reset()
+
+        # Set phase attribute for Transformer objects
+        self.phase_cd = self.perturbation.get_phase_cd()
+        
+        for iter in range(max_iter):
+            print     "iter:%3i\t" % iter,
+            if iter == 0:
+                self.first_iteration()
+                print "\n"
+            else:
+                norm = self.iteration()
+                print "abs-norm: %6.3e\t" % norm,
+                #XXX The density is complex !!!!!!
+                print ("integrated density response: % 5.2e" % 
+                       self.gd.integrate(self.nt1_G).real)
+                
+                if norm < tolerance:
+                    print ("self-consistent loop converged in %i iterations"
+                           % iter)
+                    break
+                
+            if iter == max_iter-1:
+                print     ("self-consistent loop did not converge in %i "
+                           "iterations" % (iter+1))
+                
+        return self.nt1_G.copy()
+    
     def set(self, **kwargs):
         """Set parameters for calculation."""
 
@@ -191,56 +233,14 @@ class ResponseCalculator:
                                                preconditioner=pc)
 
         self.initialized = True
-        
-    def __call__(self):
-        """Calculate density derivative."""
 
-        assert self.initialized, ("Linear response calculator "
-                                  "not initizalized.")
-
-        # Parameters
-        p = self.parameters
-        max_iter = p['max_iter']
-        tolerance = p['tolerance_sc']
-        
-        # Reset mixer
-        self.mixer.reset()
-        # Reset wave-functions
-        self.wfs.reset()
-
-        # Set phase attribute for Transformer objects
-        self.phase_cd = self.perturbation.get_phase_cd()
-        
-        for iter in range(max_iter):
-            print     "iter:%3i\t" % iter,
-            if iter == 0:
-                self.first_iteration()
-                print "\n"
-            else:
-                norm = self.iteration()
-                print "abs-norm: %6.3e\t" % norm,
-                #XXX The density is complex !!!!!!
-                print ("integrated density response: % 5.2e" % 
-                       self.gd.integrate(self.nt1_G).real)
-                
-                if norm < tolerance:
-                    print ("self-consistent loop converged in %i iterations"
-                           % iter)
-                    break
-                
-            if iter == max_iter-1:
-                print     ("self-consistent loop did not converge in %i "
-                           "iterations" % (iter+1))
-                
-        return self.nt1_G.copy()
-    
     def first_iteration(self):
         """Perform first iteration of sc-loop."""
 
         self.wave_function_variations()
         self.density_response()
         self.mixer.mix(self.nt1_G, [], phase_cd=self.phase_cd)
-        #XXX Temp
+        #XXX Temp - in order to see the Hartree potential after 1'st iteration
         v1_G = self.effective_potential_variation()
         
     def iteration(self):
@@ -261,6 +261,10 @@ class ResponseCalculator:
     def effective_potential_variation(self):
         """Calculate derivative of the effective potential (Hartree + XC)."""
 
+        # Transfer density to fine grid
+        self.nt1_g = self.finegd.zeros(dtype=self.dtype)
+        self.interpolator.apply(self.nt1_G, self.nt1_g, phases=self.phase_cd)
+        
         # Hartree part
         vHXC1_g = self.finegd.zeros(dtype=self.dtype)
         self.solve_poisson(vHXC1_g, self.nt1_g)
@@ -327,12 +331,12 @@ class ResponseCalculator:
             # Update the SternheimerOperator
             self.sternheimer_operator.set_kplusq(kplusq)
             
-            # Right-hand side of Sternheimer equation
+            # Right-hand side of Sternheimer equations
             rhs_nG = self.gd.zeros(n=self.nbands, dtype=self.gs_dtype)
             # k and k+q
             # XXX should only be done once but maybe too cheap to bother ??
             self.perturbation.apply(psit_nG, rhs_nG, self.wfs, k, kplusq)
-
+            
             if self.pc is not None:
                 # k+q
                 self.pc.set_kpt(kplusqpt)
@@ -345,7 +349,7 @@ class ResponseCalculator:
                 psit1_G = psit1_nG[n]
 
                 # Rhs of Sternheimer equation                
-                rhs_G   = -1 * rhs_nG[n]
+                rhs_G = -1 * rhs_nG[n]
 
                 if vHXC1_G is not None:
                     rhs_G -= vHXC1_G * psit_G
@@ -353,22 +357,23 @@ class ResponseCalculator:
                 # Update k-point index and band index in SternheimerOperator
                 self.sternheimer_operator.set_blochstate(n, k)
                 self.sternheimer_operator.project(rhs_G)
-
+                
                 if verbose:
                     print "\tBand %2.1i -" % n,
-                    
+
                 iter, info = self.linear_solver.solve(self.sternheimer_operator,
                                                       psit1_G, rhs_G)
-
+                
                 if info == 0:
                     if verbose: 
                         print "linear solver converged in %i iterations" % iter
                 elif info > 0:
-                    assert info == 0, ("linear solver did not converge in "
-                                       "maximum number (=%i) of iterations"
-                                       % iter)
+                    print ("linear solver did not converge in maximum number "
+                           "(=%i) of iterations" % iter)
+                    assert False
                 else:
-                    assert info == 0, ("linear solver failed to converge")
+                    print "linear solver failed to converge"
+                    assert False
                 
     def density_response(self):
         """Calculate density response from variation in the wave-functions."""
@@ -376,13 +381,12 @@ class ResponseCalculator:
         # Note, density might be complex
         self.nt1_G = self.gd.zeros(dtype=self.dtype)
 
-        total = 0
-        
         for kpt in self.kpt_u:
 
             # The occupations includes the weight of the k-points
             f_n = kpt.f_n
-            # Use weight of k-point instead of occupation
+            # Use weight of k-point instead of occupation -- spin degeneracy is
+            # included in the weight
             w = kpt.weight
             # Wave functions
             psit_nG = kpt.psit_nG
@@ -393,12 +397,8 @@ class ResponseCalculator:
                 # NOTICE: this relies on the automatic down-cast of the complex
                 # array on the rhs to a real array when the lhs is real !!
                 # Factor 2 for time-reversal symmetry
-                self.nt1_G += 2 * w * (psit_nG[n].conjugate() * psit1_nG[n])
+                self.nt1_G += 2 * w * psit_nG[n].conjugate() * psit1_nG[n]
                 #XXX
                 ## self.nt1_G += f * (psit_nG[n].conjugate() * psit1_nG[n] +
                 ##                    psit1_nG[n].conjugate() * psit_nG[n])
-
-        # Transfer to fine grid
-        self.nt1_g = self.finegd.zeros(dtype=self.dtype)
-        self.interpolator.apply(self.nt1_G, self.nt1_g, phases=self.phase_cd)
 
