@@ -1,3 +1,6 @@
+2010-08-11
+ - Bug 1: error in the eigenvalue term of the SternheimerOperator
+ - Bug 2: density on the fine grid constructed from the non-mixed coarse density
 2010-04-08
  - Density is now calculated as a complex quantity
 2010-03-29
